--- a/Noti/Noti.csproj
+++ b/Noti/Noti.csproj
@@ -95,6 +95,18 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="tempLogo.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="SettingsIcon.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="SyncIcon.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="AddIcon.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
