--- a/Noti/Noti.csproj
+++ b/Noti/Noti.csproj
@@ -36,6 +36,9 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationIcon>notifire_logo.ico</ApplicationIcon>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
       <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.dll</HintPath>
@@ -164,6 +167,24 @@
   </ItemGroup>
   <ItemGroup>
     <Resource Include="AddIcon.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="male.png" />
+    <Resource Include="female.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="notifire_logo_128.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="notifire_logo.png" />
+    <Resource Include="notifire_logo_32.png" />
+    <Resource Include="notifire_logo_64.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="notifire_logo.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="notifire_logo_32.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\System.Data.SQLite.Core.1.0.102.0\build\net451\System.Data.SQLite.Core.targets" Condition="Exists('..\packages\System.Data.SQLite.Core.1.0.102.0\build\net451\System.Data.SQLite.Core.targets')" />
